--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/core": "^7.4.4",
     "@capacitor/filesystem": "^7.1.5",
     "@capacitor/geolocation": "^7.1.6",
+    "@capacitor/haptics": "^7.0.2",
     "@capacitor/ios": "^7.4.4",
     "@capacitor/screen-orientation": "^7.0.2",
     "@types/file-saver": "^2.0.7",
