--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/android": "^7.4.4",
     "@capacitor/app": "^7.1.0",
     "@capacitor/browser": "^7.0.2",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
     "@capacitor/filesystem": "^7.1.5",
@@ -21,6 +22,7 @@
     "@capacitor/haptics": "^7.0.2",
     "@capacitor/ios": "^7.4.4",
     "@capacitor/screen-orientation": "^7.0.2",
+    "@ionic/pwa-elements": "^3.3.0",
     "@types/file-saver": "^2.0.7",
     "clsx": "^2.1.1",
     "dexie": "^4.2.1",
